--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
     "@phosphor-icons/react": "^2.1.7",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
@@ -20,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -40,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest": "^27.5.1",
+    "selenium-webdriver": "^4.27.0"
   }
 }
