--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "dev": "nodemon app.js",
     "build": "npm install",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest --verbose --coverage"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -15,6 +16,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4"
   }
 }
